# HPCC-Platform

./: version.cmake
cloud/base/: Dockerfile
cloud/run/: Dockerfile  cmd.sh  setup.sh
common/thorhelper/: CMakeLists.txt  persistent.hpp  thorsoapcall.cpp
configuration/pki/: CMakeLists.txt
dali/dfuplus/: CMakeLists.txt  dfuplus.cpp
ecl/ecl-bundle/: CMakeLists.txt
ecl/ecl-package/: CMakeLists.txt
ecl/eclcmd/: CMakeLists.txt  eclcmd_common.cpp  eclcmd_common.hpp  eclcmd_core.cpp
ecl/eclcmd/queries/: CMakeLists.txt
ecl/eclcmd/roxie/: CMakeLists.txt
ecl/eclplus/: CMakeLists.txt  eclplus.cpp
esp/clients/WUManager/: CMakeLists.txt  WUManager.cpp
esp/clients/wsecl/: CMakeLists.txt
esp/esdllib/: esdl_def.cpp  esdl_def.hpp  esdl_def_helper.cpp  esdl_def_helper.hpp  esdl_transformer.hpp  esdl_transformer2.cpp  esdl_transformer2.ipp
esp/files/: gen_form.js
esp/logging/logginglib/: CMakeLists.txt
esp/logging/loggingmanager/: CMakeLists.txt
esp/platform/: CMakeLists.txt  espbinding.hpp  espcfg.cpp  espcfg.ipp  espp.cpp  espp.hpp  espplugin.hpp  espprotocol.cpp  espprotocol.hpp  persistent.cpp  persistent.hpp
esp/protocols/http/: CMakeLists.txt
esp/scm/: WsTest.ecm  ecldirect.ecm  esp.ecm  espscm.cmake  ws_account.ecm  ws_codesign.ecm  ws_esdlconfig.ecm
esp/services/: CMakeLists.txt
esp/services/WsDeploy/: CMakeLists.txt
esp/services/WsTest/: CMakeLists.txt  WsTestPlugin.cpp  WsTestService.cpp  WsTestService.hpp  sourcedoc.xml
esp/services/ecldirect/: EclDirectService.cpp  EclDirectService.hpp
esp/services/esdl_svc_engine/: CMakeLists.txt  esdl_binding.cpp  esdl_binding.hpp  esdl_monitor.cpp  esdl_monitor.hpp  esdl_store.cpp  esdl_store.hpp
esp/services/espcontrol/: CMakeLists.txt
esp/services/ws_access/: CMakeLists.txt
esp/services/ws_account/: CMakeLists.txt  ws_accountService.cpp
esp/services/ws_codesign/: CMakeLists.txt  ws_codesignService.cpp
esp/services/ws_config/: CMakeLists.txt
esp/services/ws_configmgr/: CMakeLists.txt
esp/services/ws_decoupledlogging/: CMakeLists.txt
esp/xslt/: CMakeLists.txt  esdl2java_srvbase.xslt  esxdl2swagger.xslt  gen_form.xsl  nav.xsl  wsecl3_jsontest.xsl
plugins/cassandra/: cassandraembed.cpp
plugins/fileservices/: CMakeLists.txt  fileservices.cpp
plugins/javaembed/: javaembed.cpp
rtl/eclrtl/: eclrtl.hpp
system/jlib/: jexcept.cpp  jexcept.hpp  jsocket.cpp  jsocket.hpp
testing/regress/: ecl-test
tools/esdlcmd/: CMakeLists.txt  esdl-publish.cpp  esdlcmd_common.hpp  esdlcmd_core.cpp  esdlcmd_monitor.cpp  esdlcmd_shell.cpp
tools/hidl/: hidlcomp.cpp
(+57 files in other folders)
